<resources>
    <string name="app_name">Robu\'s Coffee Shop</string>
    <string name="send_order">Send Order</string>
    <string name="make_bill">Make Bill</string>
    <string name="_0">$0</string>
    <string name="total">Total:</string>
    <string name="simple_coffee_3">Simple Coffee: ($3)</string>
    <string name="both_toppings_5">Both Toppings: ($5)</string>
    <string name="kit_kat_4">Kit Kat: ($4)</string>
    <string name="oreo_4">Oreo: ($4)</string>
    <string name="coffee_with_toppings">Coffee With Toppings:</string>
    <string name="enter_name_here">Enter name here</string>
    <string name="intent_title">Choose an Email Client</string>
    <string name="over_15">Sorry, but you can\'t order more than 15 coffees for now! :(</string>
    <string name="under_0">Sorry, but you can\'t order -x coffees</string>
    <string name="final_amount_string">That would be:&#160;</string>
    <string name="order_of">Order -&#160;</string>
    <string name="order">New Order</string>
    <string name="simple_coffees">simple</string>
    <string name="simple_coffee">simple</string>
    <string name="oreo_coffees">with oreo</string>
    <string name="kit_kat_coffees">with kit kat</string>
    <string name="both_coffees">with both toppings</string>
    <string name="how_much">Total:</string>
    <string name="choose_mail">Choose an Email Client</string>

    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="welcome_message">Welcome!</string>
    <string name="shop_description">We want to give you a short walkthrough in order to make the undestanding of the app just a little easier. All you have to do to order the best coffee in town is covered in the following 4 steps. You just need to:</string>
    <string name="coffee">coffee</string>
    <string name="opening">opening</string>
    <string name="choose_products">Choose what you want</string>
    <string name="make_your_bill">Ask for the bill</string>
    <string name="send_the_order">Press the SEND ORDER button and confirm the request</string>
    <string name="we_ll_bring_your_coffee_in_no_time">We\'ll bring your coffee in no time!</string>
    <string name="enter_address_here">Enter address here</string>
    <string name="order_for">Order for:</string>
    <string name="just_tell_us_what_you_would_like_to_order">Just tell us what you would like to order:</string>
    <string name="deliver_at_address">Order will be delivered at address:</string>
    <string name="no_text">No</string>
    <string name="confirm_text">Yes</string>
    <string name="request_done">Request done.</string>
    <string name="request_failed">Request failed.</string>
    <string name="email_too">Do you want to send us your order by email too?</string>
    <string name="email_instead">Do you want to send us your order by email instead?</string>
    <string name="one_more_step">One more step:</string>
    <string name="complete_the_order">Complete the order?</string>
    <string name="add_address">You must tell us your address to order.</string>
    <string name="add_name">You must tell us your name to order.</string>
    <string name="add_coffee">You must add at least one coffee to order.</string>
</resources>
