<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3F1F1">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.MainActivity">

        <EditText
            android:id="@+id/customerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:ems="10"
            android:hint="@string/enter_name_here"
            android:inputType="textNoSuggestions"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/extraToppings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/customerName"
            android:text="@string/coffee_with_toppings"
            android:textAllCaps="true"
            android:textColor="#795548"
            android:textSize="23sp" />

        <TextView
            android:id="@+id/oreo_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/extraToppings"
            android:text="@string/oreo_4"
            android:textAllCaps="true"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/oreoTopping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/oreo_text_view"
            android:orientation="horizontal">


            <Button
                android:id="@+id/decrementOreoCoffeeBtn"
                style="@style/ButtonStyle"
                android:text="-"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/oreoTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingTop="8dp"
                android:paddingRight="8dp"
                android:text="0"
                android:textSize="23sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

            <Button
                android:id="@+id/incrementOreoCoffeeBtn"
                style="@style/ButtonStyle"
                android:text="+"
                tools:ignore="HardcodedText" />
        </LinearLayout>

        <TextView
            android:id="@+id/kit_kat_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/oreoTopping"
            android:text="@string/kit_kat_4"
            android:textAllCaps="true"
            android:textSize="19sp" />

        <LinearLayout
            android:id="@+id/kitKatTopping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/kit_kat_text_view"
            android:orientation="horizontal">


            <Button
                android:id="@+id/decrementKitKatCoffeeBtn"
                style="@style/ButtonStyle"
                android:text="-"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/kitKatTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingTop="8dp"
                android:paddingRight="8dp"
                android:text="0"
                android:textSize="23sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

            <Button
                android:id="@+id/incrementKitKatCoffeeBtn"
                style="@style/ButtonStyle"
                android:text="+"
                tools:ignore="HardcodedText" />
        </LinearLayout>

        <TextView
            android:id="@+id/both_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/kitKatTopping"
            android:text="@string/both_toppings_5"
            android:textAllCaps="true"
            android:textSize="19sp" />

        <LinearLayout
            android:id="@+id/bothTopping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/both_text_view"
            android:orientation="horizontal">


            <Button
                android:id="@+id/decrementToppingCoffeeBtn"
                style="@style/ButtonStyle"
                android:text="-"
                tools:ignore="HardcodedText" />

            <TextView
                android:id="@+id/toppingTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingTop="8dp"
                android:paddingRight="8dp"
                android:text="0"
                android:textSize="23sp"
                android:textStyle="bold"
                tools:ignore="HardcodedText" />

            <Button
                android:id="@+id/incrementToppingCoffeeBtn"
                style="@style/ButtonStyle"
                android:text="+"
                tools:ignore="HardcodedText" />
        </LinearLayout>


        <TextView
            android:id="@+id/quantity_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bothTopping"
            android:text="@string/simple_coffee_3"
            android:textAllCaps="true"
            android:textColor="#795548"
            android:textSize="23sp" />

        <Button
            android:id="@+id/decrementSimpleCoffeeBtn"
            style="@style/ButtonStyle"
            android:layout_below="@+id/quantity_view"
            android:text="-"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/simpleTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/quantity_view"
            android:layout_toEndOf="@+id/decrementSimpleCoffeeBtn"
            android:paddingLeft="8dp"
            android:paddingTop="8dp"
            android:paddingRight="8dp"
            android:text="0"
            android:textSize="23sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

        <Button
            android:id="@+id/incrementSimpleCoffeeBtn"
            style="@style/ButtonStyle"
            android:layout_below="@+id/quantity_view"
            android:layout_toEndOf="@+id/simpleTotal"
            android:text="+"
            tools:ignore="HardcodedText" />


        <TextView
            android:id="@+id/price_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/decrementSimpleCoffeeBtn"
            android:text="@string/total"
            android:textAllCaps="true"
            android:textColor="#795548"
            android:textSize="23sp" />

        <TextView
            android:id="@+id/price_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/price_view"
            android:text="@string/_0"
            android:textSize="23sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/price_text_view"
            android:orientation="horizontal">

            <Button
                android:id="@+id/makeBillBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:text="@string/make_bill"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/sendEmailBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/send_order"
                tools:ignore="ButtonStyle" />

        </LinearLayout>


    </RelativeLayout>

</ScrollView>